--- a/src/components/ColorModeButton.astro
+++ b/src/components/ColorModeButton.astro
@@ -23,9 +23,7 @@
       />
     ))}
   </button>
-</div> -->
-
-<!-- <script is:inline data-astro-rerun>
+</div> --><!-- <script is:inline data-astro-rerun>
 // immediate theme initialization
 (function () {
   const preference = localStorage.getItem('theme-preference') || 'system'
