--- a/src/components/fonts/DiscordFonts.astro
+++ b/src/components/fonts/DiscordFonts.astro
@@ -27,7 +27,8 @@ import { AstroFont } from 'astro-font'
 />
 
 <style is:global>
-  .discord-conversation, .discord-message {
+  .discord-conversation,
+  .discord-message {
     font-family: 'gg-sans', sans-serif;
   }
 </style>
