--- a/src/components/meta/ArtworkStructuredData.astro
+++ b/src/components/meta/ArtworkStructuredData.astro
@@ -1,6 +1,12 @@
 ---
 import type { CollectionEntry } from 'astro:content'
-import { generateArtworkSchema, generateBreadcrumbSchema, organizationSchema, personSchema, websiteSchema } from '@/lib/schema'
+import {
+  generateArtworkSchema,
+  generateBreadcrumbSchema,
+  organizationSchema,
+  personSchema,
+  websiteSchema,
+} from '@/lib/schema'
 
 interface Props {
   artwork: CollectionEntry<'artwork'>
@@ -27,25 +33,25 @@ const schema = {
     {
       '@type': 'WebPage',
       '@id': pageUrl.toString(),
-      'url': pageUrl.toString(),
-      'name': artwork.data.title,
-      'isPartOf': {
+      url: pageUrl.toString(),
+      name: artwork.data.title,
+      isPartOf: {
         '@id': 'https://fractalcounty.com/#website',
       },
-      'primaryImageOfPage': {
+      primaryImageOfPage: {
         '@id': `${pageUrl.toString()}#artwork-image`,
       },
-      'breadcrumb': {
+      breadcrumb: {
         '@id': `${pageUrl.toString()}#breadcrumb`,
       },
     },
     {
       '@type': 'ImageObject',
       '@id': `${pageUrl.toString()}#artwork-image`,
-      'url': imageUrl,
-      'width': imageWidth,
-      'height': imageHeight,
-      'caption': artwork.data.title,
+      url: imageUrl,
+      width: imageWidth,
+      height: imageHeight,
+      caption: artwork.data.title,
     },
     websiteSchema,
     organizationSchema,
@@ -54,4 +60,4 @@ const schema = {
 }
 ---
 
-<script type="application/ld+json" set:html={JSON.stringify(schema)} />
+<script type='application/ld+json' set:html={JSON.stringify(schema)} />
