--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -7,21 +7,19 @@ import Link from '@/components/Link.astro'
 import { Icon } from 'astro-icon/components'
 ---
 
-<footer
-  class="animate mt-auto py-6"
->
-  <Container as="section">
-    <div class="flex flex-col">
-      <nav aria-label="Breadcrumb" class="h-6">
+<footer class='animate mt-auto py-6'>
+  <Container as='section'>
+    <div class='flex flex-col'>
+      <nav aria-label='Breadcrumb' class='h-6'>
         <Breadcrumbs />
       </nav>
-      <div class="flex justify-between items-center h-10 pt-2">
+      <div class='flex h-10 items-center justify-between pt-2'>
         <div>
-          <div class="flex items-center gap-1">
-            <Icon name="anticopyright" class="text-[11px]" />
+          <div class='flex items-center gap-1'>
+            <Icon name='anticopyright' class='text-[11px]' />
             <Link
-              href="/unlicense"
-              class="hover:underline"
+              href='/unlicense'
+              class='hover:underline'
               underline={false}
               externalInNewTab={false}
             >
@@ -29,8 +27,8 @@ import { Icon } from 'astro-icon/components'
             </Link>
             <span>|</span>
             <Link
-              href="https://youtube.com/watch?v=XO9FKQAxWZc"
-              class="hover:underline"
+              href='https://youtube.com/watch?v=XO9FKQAxWZc'
+              class='hover:underline'
               externalInNewTab={true}
               underline={false}
             >
@@ -38,13 +36,10 @@ import { Icon } from 'astro-icon/components'
             </Link>
           </div>
         </div>
-        <div class="button-group flex items-center gap-2 min-w-[4.4rem]">
+        <div class='button-group flex min-w-[4.4rem] items-center gap-2'>
           <!-- <ColorModeButton /> -->
-          <div
-            id="back-to-top-wrapper"
-            transition:persist
-          >
-            <Button id="back-to-top" arrow="up">Back to top</Button>
+          <div id='back-to-top-wrapper' transition:persist>
+            <Button id='back-to-top' arrow='up'>Back to top</Button>
           </div>
         </div>
       </div>
