--- a/src/components/meta/WebsiteStructuredData.astro
+++ b/src/components/meta/WebsiteStructuredData.astro
@@ -1,13 +1,16 @@
 ---
 import { HOME, SITE } from '@/consts'
-import { generateBreadcrumbSchema, organizationSchema, personSchema, websiteSchema } from '@/lib/schema'
+import {
+  generateBreadcrumbSchema,
+  organizationSchema,
+  personSchema,
+  websiteSchema,
+} from '@/lib/schema'
 
 // For homepage, we only need one item
 const pageUrl = new URL(Astro.url.pathname, Astro.site)
 
-const breadcrumbItems = [
-  { name: 'Home', item: pageUrl.toString() },
-]
+const breadcrumbItems = [{ name: 'Home', item: pageUrl.toString() }]
 
 const schema = {
   '@context': 'https://schema.org',
@@ -16,14 +19,14 @@ const schema = {
     {
       '@type': 'WebPage',
       '@id': pageUrl.toString(),
-      'url': pageUrl.toString(),
-      'name': SITE.NAME,
-      'description': HOME.DESCRIPTION,
-      'isPartOf': {
+      url: pageUrl.toString(),
+      name: SITE.NAME,
+      description: HOME.DESCRIPTION,
+      isPartOf: {
         '@id': 'https://fractalcounty.com/#website',
       },
-      'inLanguage': 'en-US',
-      'breadcrumb': {
+      inLanguage: 'en-US',
+      breadcrumb: {
         '@id': `${pageUrl.toString()}#breadcrumb`,
       },
     },
@@ -38,4 +41,4 @@ const schema = {
 }
 ---
 
-<script type="application/ld+json" set:html={JSON.stringify(schema)} />
+<script type='application/ld+json' set:html={JSON.stringify(schema)} />
