--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,110 +11,97 @@ import PageLayout from '@/layouts/PageLayout.astro'
 import { getCollection } from 'astro:content'
 
 const allPosts = (await getCollection('blog'))
-  .filter(post => !post.data.draft)
+  .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
   .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE)
 
 const recentArtwork = (await getCollection('artwork'))
-  .filter(artwork => !artwork.data.draft)
+  .filter((artwork) => !artwork.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
   .slice(0, SITE.NUM_ARTWORK_ON_HOMEPAGE)
 ---
 
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
-  <WebsiteStructuredData slot="structured-data" />
-  <ProfilePageStructuredData slot="structured-data" />
-  <Container as="main">
+  <WebsiteStructuredData slot='structured-data' />
+  <ProfilePageStructuredData slot='structured-data' />
+  <Container as='main'>
     <Subheader title="Hello, I'm Chip" />
-    <div class="space-y-16">
+    <div class='space-y-16'>
       <section>
-        <article class="space-y-4">
-          <p class="animate">
-            I make stuff on the internet.
-            Usually silly stuff, sometimes artistic stuff, and very rarely useful stuff.
-            This is my website where I dump thoughts and blog posts that can't fit on my
+        <article class='space-y-4'>
+          <p class='animate'>
+            I make stuff on the internet. Usually silly stuff, sometimes
+            artistic stuff, and very rarely useful stuff. This is my website
+            where I dump thoughts and blog posts that can't fit on my
             <Link
-              href="https://x.com/fractalcounty"
-              title="X"
+              href='https://x.com/fractalcounty'
+              title='X'
               externalInNewTab={true}
             >
               Twitter
-            </Link>,
-            as well as various projects I'm working on and other miscellaneous things that don't fit elsewhere.
+            </Link>, as well as various projects I'm working on and other
+            miscellaneous things that don't fit elsewhere.
           </p>
         </article>
       </section>
 
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap gap-y-2 items-center justify-between">
-          <h2 class="font-bold uppercase">
-            Latest posts
-          </h2>
-          <Link
-            href="/blog"
-            title="Blog"
-            externalInNewTab={false}
-          >
+      <section class='animate space-y-6'>
+        <div class='flex flex-wrap items-center justify-between gap-y-2'>
+          <h2 class='font-bold uppercase'>Latest posts</h2>
+          <Link href='/blog' title='Blog' externalInNewTab={false}>
             See all posts
           </Link>
         </div>
-        <ul class="flex flex-col gap-4">
-          {allPosts.map(post => (
-            <li>
-              <ArrowCard
-                title={post.data.title}
-                description={post.data.description}
-                icon={post.data.icon}
-                href={`/blog/${post.id}`}
-              />
-            </li>
-          ))}
+        <ul class='flex flex-col gap-4'>
+          {
+            allPosts.map((post) => (
+              <li>
+                <ArrowCard
+                  title={post.data.title}
+                  description={post.data.description}
+                  icon={post.data.icon}
+                  href={`/blog/${post.id}`}
+                />
+              </li>
+            ))
+          }
         </ul>
       </section>
 
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap gap-y-2 items-center justify-between">
-          <h2 class="font-bold uppercase">
-            Archived artwork
-          </h2>
-          <Link
-            href="/art"
-            title="Art"
-            externalInNewTab={false}
-          >
+      <section class='animate space-y-6'>
+        <div class='flex flex-wrap items-center justify-between gap-y-2'>
+          <h2 class='font-bold uppercase'>Archived artwork</h2>
+          <Link href='/art' title='Art' externalInNewTab={false}>
             See all artwork
           </Link>
         </div>
-        <ArtworkCarousel
-          artworks={recentArtwork}
-          priority={true}
-        />
+        <ArtworkCarousel artworks={recentArtwork} priority={true} />
       </section>
 
-      <section class="animate space-y-4">
-        <h2 class="font-semibold uppercase">
-          Contact me
-        </h2>
+      <section class='animate space-y-4'>
+        <h2 class='font-semibold uppercase'>Contact me</h2>
         <article>
           <p>
-            If you want to get in touch with me about something or just to say hi,
-            reach out on social media or send me an email.
+            If you want to get in touch with me about something or just to say
+            hi, reach out on social media or send me an email.
           </p>
         </article>
-        <ul class="flex flex-wrap gap-2">
-          {LINKS_FOOTER.map(SOCIAL => (
-            <li class="flex gap-x-2 text-nowrap">
-              <Link
-                href={SOCIAL.HREF}
-                title={`${SITE.NAME} on ${SOCIAL.ICON}`}
-                externalInNewTab={true}
-              >
-                {SOCIAL.ICON}
-              </Link>
-              /
-            </li>
-          ))}
-          <li class="line-clamp-1">
+        <ul class='flex flex-wrap gap-2'>
+          {
+            LINKS_FOOTER.map((SOCIAL) => (
+              <li class='flex gap-x-2 text-nowrap'>
+                <Link
+                  href={SOCIAL.HREF}
+                  title={`${SITE.NAME} on ${SOCIAL.ICON}`}
+                  externalInNewTab={true}
+                >
+                  {SOCIAL.ICON}
+                </Link>
+                /
+              </li>
+            ))
+          }
+          <li class='line-clamp-1'>
             <Link
               href={`mailto:${SITE.EMAIL}`}
               title={`Email ${SITE.NAME}`}
