--- a/src/pages/unlicense.astro
+++ b/src/pages/unlicense.astro
@@ -6,25 +6,54 @@ import YoutubeCard from '@/components/YoutubeCard.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
 
 const TITLE = 'Unlicense'
-const DESCRIPTION = 'This is free and unencumbered software released into the public domain.'
+const DESCRIPTION =
+  'This is free and unencumbered software released into the public domain.'
 ---
 
 <PageLayout title={TITLE} description={DESCRIPTION}>
-  <Container as="main">
-    <div class="space-y-8">
+  <Container as='main'>
+    <div class='space-y-8'>
       <Subheader title={TITLE} />
-      <article class="animate">
-        <p class="animate">This is free and unencumbered software released into the public domain.</p>
+      <article class='animate'>
+        <p class='animate'>
+          This is free and unencumbered software released into the public
+          domain.
+        </p>
 
-        <p class="animate">Anyone is free to copy, modify, publish, use, compile, sell, or distribute this software, either in source code form or as a compiled binary, for any purpose, commercial or non-commercial, and by any means.</p>
+        <p class='animate'>
+          Anyone is free to copy, modify, publish, use, compile, sell, or
+          distribute this software, either in source code form or as a compiled
+          binary, for any purpose, commercial or non-commercial, and by any
+          means.
+        </p>
 
-        <p class="animate">In jurisdictions that recognize copyright laws, the author or authors of this software dedicate any and all copyright interest in the software to the public domain. We make this dedication for the benefit of the public at large and to the detriment of our heirs and successors. We intend this dedication to be an overt act of relinquishment in perpetuity of all present and future rights to this software under copyright law.</p>
+        <p class='animate'>
+          In jurisdictions that recognize copyright laws, the author or authors
+          of this software dedicate any and all copyright interest in the
+          software to the public domain. We make this dedication for the benefit
+          of the public at large and to the detriment of our heirs and
+          successors. We intend this dedication to be an overt act of
+          relinquishment in perpetuity of all present and future rights to this
+          software under copyright law.
+        </p>
 
-        <p class="animate">The software is provided "as is", without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and noninfringement. In no event shall the authors be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with the software or the use or other dealings in the software.</p>
+        <p class='animate'>
+          The software is provided "as is", without warranty of any kind,
+          express or implied, including but not limited to the warranties of
+          merchantability, fitness for a particular purpose and noninfringement.
+          In no event shall the authors be liable for any claim, damages or
+          other liability, whether in an action of contract, tort or otherwise,
+          arising from, out of or in connection with the software or the use or
+          other dealings in the software.
+        </p>
 
-        <p class="animate">For more information, please refer to <Link href="http://unlicense.org/">http://unlicense.org/</Link> and the following video:</p>
+        <p class='animate'>
+          For more information, please refer to <Link
+            href='http://unlicense.org/'>http://unlicense.org/</Link
+          > and the following video:
+        </p>
       </article>
-      <YoutubeCard id="XO9FKQAxWZc" />
+      <YoutubeCard id='XO9FKQAxWZc' />
     </div>
   </Container>
 </PageLayout>
